--- a/index.html
+++ b/index.html
@@ -65,12 +65,74 @@
                 </div>
                 <div class="gallery-item">
                     <video controls>
-                        <source src="showcase work.mp4" type="video/mp4">
+                        <source src="striking - any simple object can be used.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Showcase Work</div>
+                    <div class="caption">Striking - Any Simple Object</div>
                 </div>
-                <!-- Loader image removed from gallery -->
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="showcase-work.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="caption">Showcase-Work</div>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="scroll and pop up.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="caption">Scroll and Pop Up</div>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="ripple effect.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="caption">Ripple Effect</div>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="parallax animation.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="caption">Parallax Animation</div>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="loader.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="caption">Loader</div>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="homepage.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="caption">Homepage</div>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="features-services.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="caption">Features & Services</div>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="customer-section.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="caption">Customer Section</div>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="caraousel switch.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="caption">Carousel Switch</div>
+                </div>
             </div>
         </div>
     </section>
