--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Frontend Battle Gallery - Showcasing creativity, responsiveness, and innovation">
+    <meta name="keywords" content="frontend, web development, gallery, responsive design">
     <title>Frontend Battle Gallery</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -35,103 +37,105 @@
     <section id="home" class="section home-section">
         <div class="container">
             <h1>Welcome to Frontend Battle</h1>
-            <p>Showcasing creativity, responsiveness, and innovation.</p>
+            <p>Showcasing creativity, responsiveness, and innovation through modern web development.</p>
+            <p class="subtitle">Built for Frontend Battle 2.0 - Round 1: Replicate & Innovate</p>
         </div>
     </section>
 
     <!-- Gallery Section -->
     <section id="gallery" class="section">
         <div class="container">
-            <h2>Gallery</h2>
+            <h2>Project Gallery</h2>
+            <p>Interactive showcase of frontend components and animations</p>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="stats.png" alt="Stats">
-                    <div class="caption">Stats</div>
+                    <img src="stats.png" alt="Statistics Dashboard Component" loading="lazy">
+                    <div class="caption">Stats Dashboard</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="graph.png" alt="Graph">
-                    <div class="caption">Graph</div>
+                    <img src="graph.png" alt="Interactive Data Visualization" loading="lazy">
+                    <div class="caption">Data Visualization</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="cards.png" alt="Cards">
-                    <div class="caption">Cards</div>
+                    <img src="cards.png" alt="Modern Card Components" loading="lazy">
+                    <div class="caption">Card Components</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Testimonials Section Video">
                         <source src="testimonials.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Testimonials</div>
+                    <div class="caption">Testimonials Section</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Interactive Object Animation">
                         <source src="striking - any simple object can be used.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Striking - Any Simple Object</div>
+                    <div class="caption">Interactive Objects</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Portfolio Showcase">
                         <source src="showcase-work.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Showcase-Work</div>
+                    <div class="caption">Portfolio Showcase</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Scroll Animation Effects">
                         <source src="scroll and pop up.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Scroll and Pop Up</div>
+                    <div class="caption">Scroll Animations</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Ripple Button Effects">
                         <source src="ripple effect.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Ripple Effect</div>
+                    <div class="caption">Ripple Effects</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Parallax Scrolling Animation">
                         <source src="parallax animation.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="caption">Parallax Animation</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Custom Loader Animation">
                         <source src="loader.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Loader</div>
+                    <div class="caption">Custom Loader</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Homepage Hero Section">
                         <source src="homepage.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Homepage</div>
+                    <div class="caption">Homepage Design</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Features and Services Section">
                         <source src="features-services.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="caption">Features & Services</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Customer Testimonials">
                         <source src="customer-section.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="caption">Customer Section</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls preload="metadata" aria-label="Carousel Component">
                         <source src="caraousel switch.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Carousel Switch</div>
+                    <div class="caption">Carousel Component</div>
                 </div>
             </div>
         </div>
@@ -139,24 +143,70 @@
 
     <!-- Features Section -->
     <section id="features" class="section">
-        <div class="container1">
-            <h2>Features</h2>
-            <ul class="features-list">
-                <li>Responsive Design</li>
-                <li>Light & Dark Mode</li>
-                <li>Loader Animation</li>
-                <li>Gallery with Images & Videos</li>
-                <li>Navbar with Section Links</li>
-                <li>Interactive Lightbox for Images</li>
-            </ul>
+        <div class="container">
+            <h2>Features Implemented</h2>
+            <p>Comprehensive frontend capabilities showcasing modern web development</p>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">📱</div>
+                    <h3>Responsive Design</h3>
+                    <p>Fully responsive layout that works perfectly on all devices and screen sizes with CSS Grid and Flexbox.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🌙</div>
+                    <h3>Light & Dark Mode</h3>
+                    <p>Toggle between themes with smooth transitions, localStorage persistence, and system preference detection.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">⚡</div>
+                    <h3>Loader Animation</h3>
+                    <p>Custom loading animation with smooth fade-out transition that enhances user experience.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🖼️</div>
+                    <h3>Interactive Gallery</h3>
+                    <p>Media gallery with images and videos, featuring hover effects, lightbox functionality, and lazy loading.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🧭</div>
+                    <h3>Smart Navigation</h3>
+                    <p>Sticky navbar with smooth scrolling, active link highlighting, and proper section anchoring.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">✨</div>
+                    <h3>Lightbox Modal</h3>
+                    <p>Click images to view in full screen with elegant overlay, keyboard navigation, and click-to-close.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🎨</div>
+                    <h3>Animated Borders</h3>
+                    <p>Eye-catching gradient border animations using CSS masks and keyframes for modern visual appeal.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">♿</div>
+                    <h3>Accessibility</h3>
+                    <p>ARIA labels, semantic HTML, keyboard navigation, screen reader support, and proper contrast ratios.</p>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="section">
         <div class="container">
-            <h2>About</h2>
-            <p>This project is built for the Frontend Battle coding competition. All code is original or generated with the help of AI tools (GitHub Copilot).</p>
+            <h2>About This Project</h2>
+            <p>This project is built for the <strong>Frontend Battle 2.0 - Round 1: Replicate & Innovate</strong> coding competition.</p>
+            <p>All code is original and developed with the assistance of AI tools including <strong>GitHub Copilot</strong> and <strong>Claude AI</strong>.</p>
+            <p>The project demonstrates modern frontend development practices, responsive design principles, and innovative user experience enhancements.</p>
+            <div class="tech-stack">
+                <h3>Technologies Used:</h3>
+                <ul>
+                    <li>HTML5 (Semantic markup)</li>
+                    <li>CSS3 (Grid, Flexbox, Custom Properties, Animations)</li>
+                    <li>Vanilla JavaScript (ES6+)</li>
+                    <li>AI Tools: GitHub Copilot, Claude AI</li>
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -164,13 +214,16 @@
     <section id="contact" class="section">
         <div class="container">
             <h2>Contact</h2>
-            <p>For queries, email: <a href="mailto:haripriyagajula20@gmail.com">haripriyagajula20@gmail.com</a></p>
+            <p>Questions about this project or interested in collaboration?</p>
+            <p>Email: <a href="mailto:haripriyagajula20@gmail.com">haripriyagajula20@gmail.com</a></p>
+            <p>GitHub: <a href="https://github.com/haripriya-28" target="_blank" rel="noopener noreferrer">@haripriya-28</a></p>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            &copy; 2025 Frontend Battle. Built with ❤️ and AI tools (GitHub Copilot).
+            <p>&copy; 2025 Frontend Battle Gallery. Built with ❤️ and AI tools (GitHub Copilot, Claude AI).</p>
+            <p>Developed by Haripriya Gajula for Frontend Battle 2.0</p>
         </div>
     </footer>
 
