--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Frontend Battle Gallery - Showcasing creativity, responsiveness, and innovation">
-    <meta name="keywords" content="frontend, web development, gallery, responsive design">
     <title>Frontend Battle Gallery</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -37,7 +35,7 @@
     <section id="home" class="section home-section">
         <div class="container">
             <h1>Welcome to Frontend Battle</h1>
-            <p>Showcasing creativity, responsiveness, and innovation through modern web development.</p>
+            <p>Showcasing creativity, responsiveness, and innovation.</p>
             <p class="subtitle">Built for Frontend Battle 2.0 - Round 1: Replicate & Innovate</p>
         </div>
     </section>
@@ -45,97 +43,96 @@
     <!-- Gallery Section -->
     <section id="gallery" class="section">
         <div class="container">
-            <h2>Project Gallery</h2>
-            <p>Interactive showcase of frontend components and animations</p>
+            <h2>Gallery</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="stats.png" alt="Statistics Dashboard Component" loading="lazy">
-                    <div class="caption">Stats Dashboard</div>
+                    <img src="stats.png" alt="Stats">
+                    <div class="caption">Stats</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="graph.png" alt="Interactive Data Visualization" loading="lazy">
-                    <div class="caption">Data Visualization</div>
+                    <img src="graph.png" alt="Graph">
+                    <div class="caption">Graph</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="cards.png" alt="Modern Card Components" loading="lazy">
-                    <div class="caption">Card Components</div>
+                    <img src="cards.png" alt="Cards">
+                    <div class="caption">Cards</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Testimonials Section Video">
+                    <video controls>
                         <source src="testimonials.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Testimonials Section</div>
+                    <div class="caption">Testimonials</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Interactive Object Animation">
+                    <video controls>
                         <source src="striking - any simple object can be used.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Interactive Objects</div>
+                    <div class="caption">Striking - Any Simple Object</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Portfolio Showcase">
+                    <video controls>
                         <source src="showcase-work.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Portfolio Showcase</div>
+                    <div class="caption">Showcase-Work</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Scroll Animation Effects">
+                    <video controls>
                         <source src="scroll and pop up.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Scroll Animations</div>
+                    <div class="caption">Scroll and Pop Up</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Ripple Button Effects">
+                    <video controls>
                         <source src="ripple effect.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Ripple Effects</div>
+                    <div class="caption">Ripple Effect</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Parallax Scrolling Animation">
+                    <video controls>
                         <source src="parallax animation.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="caption">Parallax Animation</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Custom Loader Animation">
+                    <video controls>
                         <source src="loader.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Custom Loader</div>
+                    <div class="caption">Loader</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Homepage Hero Section">
+                    <video controls>
                         <source src="homepage.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Homepage Design</div>
+                    <div class="caption">Homepage</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Features and Services Section">
+                    <video controls>
                         <source src="features-services.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="caption">Features & Services</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Customer Testimonials">
+                    <video controls>
                         <source src="customer-section.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="caption">Customer Section</div>
                 </div>
                 <div class="gallery-item">
-                    <video controls preload="metadata" aria-label="Carousel Component">
+                    <video controls>
                         <source src="caraousel switch.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <div class="caption">Carousel Component</div>
+                    <div class="caption">Carousel Switch</div>
                 </div>
             </div>
         </div>
