--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         <div class="container">
             <h1>Welcome to Frontend Battle</h1>
             <p>Showcasing creativity, responsiveness, and innovation.</p>
-            <p class="subtitle">Built for Frontend Battle 2.0 - Round 1: Replicate & Innovate</p>
         </div>
     </section>
 
@@ -140,70 +139,24 @@
 
     <!-- Features Section -->
     <section id="features" class="section">
-        <div class="container">
-            <h2>Features Implemented</h2>
-            <p>Comprehensive frontend capabilities showcasing modern web development</p>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">📱</div>
-                    <h3>Responsive Design</h3>
-                    <p>Fully responsive layout that works perfectly on all devices and screen sizes with CSS Grid and Flexbox.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🌙</div>
-                    <h3>Light & Dark Mode</h3>
-                    <p>Toggle between themes with smooth transitions, localStorage persistence, and system preference detection.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">⚡</div>
-                    <h3>Loader Animation</h3>
-                    <p>Custom loading animation with smooth fade-out transition that enhances user experience.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🖼️</div>
-                    <h3>Interactive Gallery</h3>
-                    <p>Media gallery with images and videos, featuring hover effects, lightbox functionality, and lazy loading.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🧭</div>
-                    <h3>Smart Navigation</h3>
-                    <p>Sticky navbar with smooth scrolling, active link highlighting, and proper section anchoring.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">✨</div>
-                    <h3>Lightbox Modal</h3>
-                    <p>Click images to view in full screen with elegant overlay, keyboard navigation, and click-to-close.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🎨</div>
-                    <h3>Animated Borders</h3>
-                    <p>Eye-catching gradient border animations using CSS masks and keyframes for modern visual appeal.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">♿</div>
-                    <h3>Accessibility</h3>
-                    <p>ARIA labels, semantic HTML, keyboard navigation, screen reader support, and proper contrast ratios.</p>
-                </div>
-            </div>
+        <div class="container1">
+            <h2>Features</h2>
+            <ul class="features-list">
+                <li>Responsive Design</li>
+                <li>Light & Dark Mode</li>
+                <li>Loader Animation</li>
+                <li>Gallery with Images & Videos</li>
+                <li>Navbar with Section Links</li>
+                <li>Interactive Lightbox for Images</li>
+            </ul>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="section">
         <div class="container">
-            <h2>About This Project</h2>
-            <p>This project is built for the <strong>Frontend Battle 2.0 - Round 1: Replicate & Innovate</strong> coding competition.</p>
-            <p>All code is original and developed with the assistance of AI tools including <strong>GitHub Copilot</strong> and <strong>Claude AI</strong>.</p>
-            <p>The project demonstrates modern frontend development practices, responsive design principles, and innovative user experience enhancements.</p>
-            <div class="tech-stack">
-                <h3>Technologies Used:</h3>
-                <ul>
-                    <li>HTML5 (Semantic markup)</li>
-                    <li>CSS3 (Grid, Flexbox, Custom Properties, Animations)</li>
-                    <li>Vanilla JavaScript (ES6+)</li>
-                    <li>AI Tools: GitHub Copilot, Claude AI</li>
-                </ul>
-            </div>
+            <h2>About</h2>
+            <p>This project is built for the Frontend Battle coding competition. All code is original or generated with the help of AI tools (GitHub Copilot).</p>
         </div>
     </section>
 
@@ -211,16 +164,13 @@
     <section id="contact" class="section">
         <div class="container">
             <h2>Contact</h2>
-            <p>Questions about this project or interested in collaboration?</p>
-            <p>Email: <a href="mailto:haripriyagajula20@gmail.com">haripriyagajula20@gmail.com</a></p>
-            <p>GitHub: <a href="https://github.com/haripriya-28" target="_blank" rel="noopener noreferrer">@haripriya-28</a></p>
+            <p>For queries, email: <a href="mailto:haripriyagajula20@gmail.com">haripriyagajula20@gmail.com</a></p>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Frontend Battle Gallery. Built with ❤️ and AI tools (GitHub Copilot, Claude AI).</p>
-            <p>Developed by Haripriya Gajula for Frontend Battle 2.0</p>
+            &copy; 2025 Frontend Battle. Built with ❤️ and AI tools (GitHub Copilot).
         </div>
     </footer>
 
